#10 Implementando novas funcionalidades com uso de Pedidos, endereços e sistema de atualização dos status dos pedidos